fixed overflow prob & .env prob for hosting

--- a/client/src/app/globals.css
+++ b/client/src/app/globals.css
@@ -68,7 +68,7 @@ body::after {
   margin:0;
 }
 
-body{
+#game-container{
 overflow:hidden;
 }
 
